--- a/eclipsecodesearch/build.properties
+++ b/eclipsecodesearch/build.properties
@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                lib/gdata-client-1.0.jar,\
-               lib/gdata-codesearch-1.0.jar
+               lib/gdata-codesearch-1.0.jar,\
+               bin/
