--- a/trunk/eclipsecodesearch/plugin.xml
+++ b/trunk/eclipsecodesearch/plugin.xml
@@ -11,7 +11,7 @@
       <view
             name="CodeSearch View"
             icon="icons/sample.gif"
-            category="CodeSearch"
+            category="org.asdf.codesearch.viewCategory"
             class="codesearch.views.CodeSearchView"
             id="codesearch.views.CodeSearchView">
       </view>
@@ -19,7 +19,7 @@
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
       <perspectiveExtension
-            targetID="org.eclipse.ui.resourcePerspective">
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
          <view
                id="codesearch.views.CodeSearchView"
                ratio="0.5"
@@ -41,7 +41,7 @@
                id="org.adsf.codesearch.buttons.next"
                label="next"
                style="push"
-               toolbarPath="push_group"
+               toolbarPath="navigation"
                tooltip="Next Example"/>
          <action
                class="codesearch.CodeSearchAction"
@@ -50,7 +50,7 @@
                id="org.adsf.codesearch.buttons.previous"
                label="previous"
                style="push"
-               toolbarPath="push_group"
+               toolbarPath="navigation"
                tooltip="Previous Example"/>
       </viewContribution>
    </extension>
